# UTXOracle

./: .env.example  .gitignore  .mcp.browser.json  .mcp.browser2.json  .mcp.codebase.json  .mcp.json  .mcp.screen.json  CHANGELOG_SPEC.md  CLAUDE.md  CONFIG_UPDATE.txt  DELEGATION_T062-T064_MANUAL_VALIDATION.md  DELEGATION_T067-T074.md  FRONTEND_VIZ_IMPLEMENTATION.txt  HISTORICAL_DATA.md  INTEGRATION_TEST_REPORT.md  MIGRATION_GUIDE.md  MODULAR_ARCHITECTURE.md  PHASE3_VERIFICATION.md  README.md  SESSION_CHECKPOINT.md  SPECKIT_FEATURE_SPEC.md  SPECKIT_TECH_PLAN.md  TASK_COMMANDS.md  TECHNICAL_SPEC.md  TECHNICAL_SPEC_ADVANCED.md  ULTRA_KISS_WHALE_PLAN.md  UTXOracle_2025-10-24.html  UTXOracle_921627-921771.html  UTXOracle_921628-921772.html  UTXOracle_library.py  backtest_results.json  batch_summary.html  contadino_cosmico.md  main.py  orchestrator.py  pyproject.toml  utxoracle-api.service  utxoracle-whale-detection.service
.claude/: AGENT_TOOLS_REFERENCE.md  BROWSER_MCP_QUICK_REFERENCE.md  HOOKS_ANALYSIS.md  HOOKS_TUTORIAL_ANALYSIS.md  META_LEARNING_README.md  README.md  TDD_GUARD_VS_AUTOTEST.md  config.json  settings.local copy.json
.github/: CLEANUP_CHECKLIST.md  README.md  pre-commit.hook
.serena/: project.yml
api/: __init__.py  config.py  main.py  mempool_whale_endpoints.py  rate_limiter.py  whale_auth.py  whale_security.py  whale_websocket.py
archive/: contadino_cosmico_post_lettura.md  contadino_galattico.md
data/: exchange_addresses.csv
docs/: BASELINE_LIVE_ARCHITECTURE.md  BUGFIX_REPORT_2025-10-23.md  DOWNSAMPLING_ANALYSIS_FINDINGS.md  DOWNSAMPLING_ANALYSIS_TODO.md  DOWNSAMPLING_PHASE2_DESIGN.md  GEMINI_FIX_ANALYSIS.md  IMPLEMENTATION_CHECKLIST.md  MANUAL_TEST_US3_CONFIDENCE_WARNING.md  MEMPOOL_WHALE_OPERATIONS.md  OPERATIONS.md  PHASE_DISCOVERY_COMPLETE_ANALYSIS.md  POLISH_PLAN_P2_ENHANCEMENTS.md  SPEC005_PROJECT_STATUS_REPORT.md  STEP10_IMPLEMENTATION_REPORT.md  T093_FINAL_REPORT.md  T093_validation_report.md  WHALE_FLOW_BACKTEST_REPORT.md  WHALE_FLOW_DETECTOR.md  (+1 more)
(+967 files in other folders)
